--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -134,49 +134,22 @@
             </div>
 
             <div *ngIf="canShowTransferAccounts()">
+
+               <!-- Took a while to get account lookup to work in an almost reasonable way.
+                    As soon as I got it to work I discovered the ngBootstrap 'Typeahead' component which 
+                    on the face of it looks like it would do what I want it to, except for the display of the
+                    complete list. Of course nothing ever works quite the way it needs to and I have no
+                    idea if the pseudo-fuzzy search based on number and name fields is possible or whether
+                    the selected object is returned and not just a string - this was the problem with datalist...
+                    CHeckout the 'Template for results' example using an 'object for the model'
+                    Still it might be interesting to try it so I don't have to rely on luck which seems to be
+                    the case for the way it is at the moment!
+                 -->
                <div class="acc-modal-row">
                   <div class="input-group-prepend">
-                     <span class="acc-modal-label" id="lbCpty">Counterparty account</span>
+                        <span class="acc-modal-label" id="lbCpty" >Counterparty name</span>
                   </div>
-                  <select class="form-control form-control-sm" (change)="onChangeCptySelect($event)" [(ngModel)]="txTfrAccount" name="txTfrAccount" id="txTfrAccount" title="Correspondent account">
-                     <option [ngValue]="null"></option>
-                     <option *ngFor="let trnAcc of transferAccounts" [ngValue]="trnAcc">{{ this.displayTfrAccountItem(trnAcc) }}</option>
-                  </select>               
-               </div>
-
-               <!-- dataliast doesn't quite do what I want, specifically it only provides the displayed value and not the
-                    data object which is not helpful unless it can be reparsed back into the object, which is a pain, it also
-                    doesn't limit the choices to those in the list (I think).
-                    It would be useful for the 'Type' which I would like to present a list of previous types or allow a new type
-               <div class="acc-modal-row">
-                  <div class="input-group-prepend">
-                     <span class="acc-modal-label" id="lbCpty">Counterparty account</span>
-                  </div>
-                  <input (change)="onChangeCptySelect($event)" [(ngModel)]="txTfrAccount" class="form-control" list="datalistOptions" name="tfraccDataList" id="tfraccDataList" placeholder="Type to search...">
-                  <datalist name="datalistOptions" id="datalistOptions">
-                     <option [ngValue]="null"></option>
-                     <option *ngFor="let trnAcc of transferAccounts" [ngValue]="trnAcc">{{ this.displayTfrAccountItem(trnAcc) }}</option>
-                  </datalist >               
-               </div>               
-               -->
-
-               <!-- 
-                  This is the start of a search of previous counterparties. 
-                  The idea is that it should display a list which overlays the form like a dropdown list does and selection
-                  from the list should populate the transfer fields.
-                  At the moment the list popsup in response to entered text but it moves everything around.
-                  Tried using 'a href="#"' but that caused the page to go away when the item is clicked.
-                  Tried using button, seemed to work except the colouring didn't work.
-                  UL/LI seems to work OK - could adjust the colour based on whether it is a 'shadow' account or external
-
-                  Still need to find a way to get it to overlay the stuff above and to go away when clicked.
-               -->
-                
-               <div class="acc-modal-row">
-                  <div class="input-group-prepend">
-                        <span class="acc-modal-label" id="lbCpty" >Counterparty account S</span>
-                  </div>
-                  <input #searchQuery (input)="onSearchUpdated(searchQuery.value)" title="Counterparty search" name="txCpty" id="txCpty" type="text" class="form-control form-control-sm"  /> 
+                  <input #searchQuery (input)="onSearchUpdated(searchQuery.value)" [(ngModel)]="txCptyName" title="Counterparty search" name="txCptyName" id="txCptyName" type="text" class="form-control form-control-sm" autoComplete="off" /> 
                   <button
                   type="button"
                   class="btn btn-outline-primary me-2"
@@ -198,12 +171,6 @@
                   </div>
                   <input title="Communication" [(ngModel)]="txCommunication" (paste)="onPasteComm($event)" name="txCommunication" id="txCommunication" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbCommunication">
                </div>
-               <div class="acc-modal-row">
-                  <div class="input-group-prepend">
-                     <span class="acc-modal-label" id="lbCptyName">Counterprty name</span>
-                  </div>
-                  <input title="Counterprty name" [(ngModel)]="txCptyName" name="txCptyName" id="txCptyName" type="text" class="form-control form-control-sm" placeholder="" aria-label=""  aria-describedby="lbCptyName">
-               </div> 
                <div class="acc-modal-row">
                   <div class="input-group-prepend">
                      <span class="acc-modal-label" id="lbCptyNumber">Counterprty IBAN</span>
