--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -145,11 +145,29 @@
                     Still it might be interesting to try it so I don't have to rely on luck which seems to be
                     the case for the way it is at the moment!
                  -->
+               <ng-template #rt let-r="result" let-t="term">
+                  <ngb-highlight [result]="displayTfrAccountItem(r)" [term]="t"></ngb-highlight>
+               </ng-template>
+               <div class="acc-modal-row">
+                  <div class="input-group-prepend">
+                     <span class="acc-modal-label" id="lbCptyTA" >Counterparty name</span>
+                  </div>                  
+                  <input  [(ngModel)]="transferAccounts" 
+                          [ngbTypeahead]="search"
+                          [resultTemplate]="rt"
+                          [inputFormatter]="formatter"
+                          [selectOnExact]="true" 
+                          [editable]="true"
+                          id="typeahead-basic" name="typeahead-basic" type="text" class="form-control form-control-sm" />
+
+               </div>
+
+               <!-- 
                <div class="acc-modal-row">
                   <div class="input-group-prepend">
                         <span class="acc-modal-label" id="lbCpty" >Counterparty name</span>
                   </div>
-                  <input #searchQuery (input)="onSearchUpdated(searchQuery.value)" [(ngModel)]="txCptyName" title="Counterparty search" name="txCptyName" id="txCptyName" type="text" class="form-control form-control-sm" autoComplete="off" /> 
+                  <input #searchQuery (input)="onSearchUpdated(searchQuery.value)" [(ngModel)]="txCptyName" title="Counterparty with search" name="txCptyName" id="txCptyName" type="text" class="form-control form-control-sm" autoComplete="off" /> 
                   <button
                   type="button"
                   class="btn btn-outline-primary me-2"
@@ -164,7 +182,7 @@
                      </ul>
                   </div>
                </div>  
-
+               -->
                <div class="acc-modal-row">
                   <div class="input-group-prepend">
                      <span class="acc-modal-label" id="lbCommunication">Communication</span>
