goto page number

--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -51,6 +51,22 @@
          <button class="btn btn-outline-dark btn-sm" (click)="nextPage()" title="prev">
             <i class="bi bi-chevron-left"></i>
          </button>
+
+         <input
+            #i
+            type="text"
+            inputmode="numeric"
+            pattern="[0-9]*"
+            class="form-control form-control-sm text-center"
+            id="paginationInput"
+            [value]="pageNumber"
+            (keyup.enter)="selectPage(i.value)"
+            (blur)="selectPage(i.value)"
+            (input)="formatInput($any($event).target)"
+            aria-labelledby="paginationInputLabel paginationDescription"
+            style="width: 2.8rem"
+         />
+
          <button class="btn btn-outline-dark btn-sm" type="button" (click)="prevPage()" title="next">
             <i class="bi bi-chevron-right"></i>
          </button>  
@@ -97,7 +113,7 @@
               <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
               <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txDate"
                  name="txDate" id="txDate" type="text"
-                 class="form-control-date form-control form-control-sm" placeholder="YYYY-MM-DD">
+                 class="form-control-date form-control form-control-sm" placeholder="dd/mm/yyyy">
                  <div class="input-group-append">
                     <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="open calendar">
                        <i class="bi bi-calendar3"></i>
@@ -245,7 +261,7 @@ related to using angular with the modal
                   <!-- ng add @angular/localize was required to enable navigation backwards and forwards   -->
                   <input ngbDatepicker #dt="ngbDatepicker" [(ngModel)]="txUpdDate"
                      name="txUpdDate" id="txUpdDate" type="text"
-                     class="form-control-date form-control form-control-sm" placeholder="MM/DD/YYYY">
+                     class="form-control-date form-control form-control-sm" placeholder="mm/dd/yyyy">
                   <div class="input-group-append">
                      <button class="btn btn-outline-secondary" (click)="dt.toggle()" type="button" title="Date">
                         <i class="bi bi-calendar3"></i>
