add last page button

--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -48,6 +48,10 @@
    </table>
    <div class="text-center text-md-left pb-2">
       <div  class="btn-group" role="group">
+         <button class="btn btn-outline-dark btn-sm" (click)="lastPage()" title="last">
+            <i class="bi bi-chevron-bar-left"></i>
+         </button>
+
          <button class="btn btn-outline-dark btn-sm" (click)="nextPage()" title="prev">
             <i class="bi bi-chevron-left"></i>
          </button>
