--- a/account.ui/src/app/transactions/transactions.component.css
+++ b/account.ui/src/app/transactions/transactions.component.css
@@ -1,6 +1,6 @@
 .title
 {
-   padding-top: 16px;
+   padding-top: 5px;
    font-size: 16px;
    font-weight:bold;
 }
@@ -9,11 +9,21 @@
    display: inline;
 }
 
-.title-right
+.title-center
 {
    font-size: 12px;
-   display: inline;
-   float: right;
    font-weight:normal;
 }
 
+.title-right
+{
+   font-size: 12px;
+   font-weight:normal;
+   text-align:right;
+   justify-content: right;
+}
+
+.flex1 {
+   flex: 1;
+ }
+ 
