--- a/account.ui/src/app/transactions/transactions.component.css
+++ b/account.ui/src/app/transactions/transactions.component.css
@@ -1,9 +1,21 @@
 .title
 {
    padding-top: 5px;
-   font-size: 16px;
-   font-weight:bold;
+
 }
+
+.title-label
+{
+   text-align:left;
+   font-size: 10px; 
+}
+.title-text
+{
+   text-align:left;
+   font-size: 14px;
+   font-weight:bold; 
+}
+
 .title-left
 {
    display: inline;
