--- a/account.ui/src/app/transactions/transactions.component.html
+++ b/account.ui/src/app/transactions/transactions.component.html
@@ -198,7 +198,8 @@
             </div>
          </form>
          <button type="button" class="btn btn-default btn-primary" (click)="addtransaction();">Add new transaction</button>&nbsp;
-         <button type="button" class="btn btn-primary" (click)="doScan();">Scan QR code</button>
+         <button type="button" class="btn btn-primary" (click)="doScan();">Scan QR code</button>&nbsp;
+         <button *ngIf="canShowTransferAccounts()" type="button" class="btn btn-primary" (click)="showQR(qrpayermodal);">Show QR code</button>
       </div>
       <div>
          <!-- this should go in the app page or be done by the app component, I think-->
@@ -324,8 +325,8 @@ related to using angular with the modal
                      </button> 
             </div>
             <div class="float-end d-flex gap-2">       
-                     <button type="button" class="btn btn-secondary" (click)="updmodal.dismiss('CANCEL')">Cancel</button>
-                     <button type="button" class="btn btn-default btn-primary" (click)="updmodal.close('UPDATE')">Update</button>
+               <button type="button" class="btn btn-secondary" (click)="updmodal.dismiss('CANCEL')">Cancel</button>
+               <button type="button" class="btn btn-default btn-primary" (click)="updmodal.close('UPDATE')">Update</button>
             </div>
             </div>
          </div>
@@ -335,3 +336,15 @@ related to using angular with the modal
          <!-- modal-dialog -->
 </ng-template>
 
+<ng-template #qrpayermodal let-qr>
+   <div id="qrid" class="modal-dialog m-0 p-1">
+      <div class="modal-content m-0 p-0"> <!-- must have this for the clicks to work!!!! -->
+         <div class="modal-body">
+            <qrcodepayer [epctrans]="epctxn"></qrcodepayer>
+         </div>
+         <div class="modal-footer">
+            <button type="button" class="btn btn-default btn-primary" (click)="qr.dismiss('CANCEL')">Close</button>
+         </div>
+      </div>
+   </div>
+</ng-template>
