display qr image

--- a/account.ui/src/app/qrcodepayer/qrcodepayer.component.html
+++ b/account.ui/src/app/qrcodepayer/qrcodepayer.component.html
@@ -1,3 +1,5 @@
-<p>qrcodepayer works!</p>
-<b><pre> {{ epctrans | json }}</pre></b>
-<img #qrcodeimg />
+<!-- app/qrcodepayer/qrcodepayer.component.html -->
+<pre> {{ epctrans | json }}</pre>
+<div class="imgcenter">
+   <img width="200" #qrcodeimg />
+</div>
