--- a/account.ui/src/app/app.component.html
+++ b/account.ui/src/app/app.component.html
@@ -17,8 +17,8 @@ bar across the top of the page...
       <button ngbDropdownToggle class="btn btn-sm btn-dark remove-caret" id="btnMenu"><span class="navbar-toggler-icon"></span></button>
       <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
          <button ngbDropdownItem routerLink="/standingorders">Standing Orders</button>
-         <button ngbDropdownItem routerLink="/">Account details</button>
-         <button ngbDropdownItem routerLink="/">Check items (maybe)</button>
+         <button ngbDropdownItem routerLink="/transferaccounts">Transfer Accounts</button>
+         <button ngbDropdownItem routerLink="/">Account details (to come)</button>
          <button ngbDropdownItem routerLink="/">Extracts aka. Search (eventually)</button>
       </div>
     </li>  
