no way to change the delete button colour to red

--- a/account.ui/src/app/app.component.css
+++ b/account.ui/src/app/app.component.css
@@ -138,3 +138,8 @@ td.nowrap  {
 .remove-caret::after {
     display: none !important;
 }
+
+.mdc-button ~ .mdc-button {
+   margin-left: 10px;
+}
+ 
