--- a/account.ui/src/app/transferaccount-edit-mat/transferaccount-edit-mat.component.html
+++ b/account.ui/src/app/transferaccount-edit-mat/transferaccount-edit-mat.component.html
@@ -29,7 +29,7 @@
             <div class="col">
                <mat-form-field  appearance="outline" class="full-width">
                   <mat-label>Related Account</mat-label>
-                  <mat-select formControlName="relatedAccount">
+                  <mat-select (selectionChange)="relatedAccountChange($event.value)" formControlName="relatedAccount">
                      @for (acc of accounts; track acc) 
                      {
                         <mat-option [value]="acc">{{ acc.name }}</mat-option>
@@ -43,12 +43,6 @@
                   <input type="number" matInput placeholder="" formControlName="order">
                </mat-form-field>                
             </div>
-            <div class="col">
-               <mat-form-field  appearance="outline" class="full-width">
-                  <mat-label>Type</mat-label>
-                  <input matInput placeholder="" formControlName="type">
-               </mat-form-field>                
-            </div>
          </div>
       </mat-card-content>
       <mat-card-actions>
@@ -56,19 +50,37 @@
          <!-- 
             More wasted hours trying to get the delete button to show red.
             Nothing works, it's always blue.
-            No clue in any of the Material docs as to how you are supposed to set anything other
-            than the primary or disabled colours. Google gives the color attribute but it
+            No clue from any of the POS Material docs as to how you are supposed to set anything other
+            than the primary or disabled colours. Google gives the 'color' attribute but it
             just shows as a primary coloured button.
             Eventually came across a commented line in the generated 'custom-theme.scss' about
             needing to uncomment the line to use the 'deprecated' color attribute. For FORKs sake
             why put it in a generated file and NEVER EVER EVER mention it in any of the forking
-            shirty documentation. And what the fork has it been replaced with?
+            shirty documentation. And what the fork has it been replaced with? Nothing, is the
+            answer it appears. So I'm using the 'deprecated' method and hope by the time it
+            goes away they will have provided something usable to replace it! Or I'll have gone 
+            back to bootstrap.
+
+            Again the true shirtty nature of Material reveals itself in the ridiculous steps
+            needed to get an icon to display as a button. There is simply no logic behind it. The 
+            code for the delete icon was arrived at after hours of trial and error. Yes the empty
+            'span' is required in order for the mat-icon class to be recognised. It's conceivable
+            that a different button type is required but any other type simply does not match
+            the other buttons and/or does not change to the required colour. Everything I try
+            to do with Material is just so time consuming due to the absence of useful examples/documentation,
+            seriously thinking of giving up on Material and sticking to bootstrap.
+            
           -->
-         <button mat-flat-button color="warn" type="reset" (click)="onDelete()">Delete</button>
+            @if(canDelete())
+            {
+               <button mat-flat-button color="warn" type="reset" (click)="onDelete()">
+                  <span><mat-icon class="deleteicon" fontSet="material-symbols-rounded">delete</mat-icon></span>
+               </button>
+            }
          </div>
          <div class="actions-card-right">
-         <button mat-stroked-button type="reset" (click)="onCancel()">Cancel</button>
-         <button mat-flat-button type="submit" [disabled]="!taForm.valid">Submit</button>
+            <button mat-stroked-button type="reset" (click)="onCancel()">Cancel</button>
+            <button mat-flat-button type="submit" [disabled]="!taForm.valid">Submit</button>
          </div>
       </mat-card-actions>
    </form>
