--- a/account.ui/src/app/transferaccounts/transferaccounts.component.html
+++ b/account.ui/src/app/transferaccounts/transferaccounts.component.html
@@ -1,32 +1,31 @@
-<!-- account.ui/src/app/standingorders/standingorders.component.html -->
+<!-- src/app/transferaccounts/transferaccounts.component.html -->
 <div class="container-fluid">
-    <div class="row">
+   <div class="row">
       <div class="col text-start">
        <h3>Transfer Accounts</h3>
       </div>
       <div class="col text-end">
        <button class="btn btn-secondary bi bi-plus-square" (click)="addTransferAccount()"></button>
       </div>
-    </div>
-  </div>
- 
- <div class="transferaccountlist" *ngIf="isTransferAccounts()">
+   </div>
+</div>
+
+<div class="transferaccountlist table-responsive" *ngIf="isTransferAccounts()">
    <table class="table table-striped table-sm">
-     <thead class="thead-inverse">
-     <tr><th>Name</th><th>Account</th><th>Memo</th><th>Order</th><th>Type</th><th>Related Account</th><th></th></tr>
-     </thead>
-     <tbody>
-     <tr *ngFor="let ta of transferAccounts">
-        <td class="nowrap">{{ta.cptyAccountName}}</td>
-        <td class="nowrap">{{ta.cptyAccountNumber}}</td>
-        <td class="nowrap">{{ta.lastCommunication}}</td>
-        <td>{{ta.order}}</td>
-        <td>{{ta.type}}</td>
-        <td>{{ta.relatedAccountId}}</td>
-        <td>
-          <button class="acc-table-btn" (click)="editTransferAccount(ta)"><i class="bi bi-pencil-square" aria-hidden="true"></i></button>
-        </td>
-        </tr>
-     </tbody>
+      <thead class="thead-inverse">
+         <tr><th>Name</th><th>Account</th><th>Memo</th><th>Order</th><th>RAcc</th><th class="account-edit"></th></tr>
+      </thead>
+      <tbody>
+         <tr *ngFor="let ta of transferAccounts">
+            <td class="">{{ta.cptyAccountName}}</td>
+            <td class="nowrap">{{ta.cptyAccountNumber}}</td>
+            <td>{{ta.lastCommunication}}</td>
+            <td>{{ta.order}}</td>
+            <td>{{ta.relatedAccountName}}</td>
+            <td class="account-edit">
+               <button class="acc-table-btn" (click)="editTransferAccount(ta)"><i class="bi bi-pencil-square"></i></button>
+            </td>
+         </tr>
+      </tbody>
    </table>
- </div>
+</div>
