--- a/account.ui/src/sass/custom-theme.scss
+++ b/account.ui/src/sass/custom-theme.scss
@@ -1,3 +1,18 @@
+// src/sass/custom-theme.scss
+// This is no longer used (I hope)!
+// I finally managed to figure out how to revert to a standard Material theme
+// instead of this theme which is lacking the ability to give buttons color.
+// The standard themes are only able to give buttons colour using the 
+// supposedly deprecated 'color' attribute - I have found no alternative
+// in the Material 3 way of doing things - but at least 'color' is enabled
+// without needing to go hunting through generated code to find something 
+// to uncomment - no clue why it forced me to have a generated theme in the first
+// place, presumably because they know it will cause all sorts of headaches and
+// hours of wasted time.
+// Would really like to decrease the 'density' but no clue how to do it when
+// overriding a value in a standard theme.
+
+// NB. To use it again (why on earth would I????) put the path in the 'styles' section of angular.json
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
