--- a/account.ui/src/app/transferaccount-edit-mat/transferaccount-edit-mat.component.css
+++ b/account.ui/src/app/transferaccount-edit-mat/transferaccount-edit-mat.component.css
@@ -45,3 +45,12 @@
    width: 30px ;
    padding-top:3px;
 }
+
+.mat-mdc-dialog-content
+{
+   height:100%;
+   max-height: 100%;
+   padding: 0px 0px 0px 0px !important;
+   overflow: auto !important;   
+   background-color:  rgba(0, 0, 0, 0.32);
+}
