--- a/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
+++ b/account.ui/src/app/so-edit-mat/so-edit-mat.component.css
@@ -17,11 +17,6 @@
    margin-bottom: 10px;
 }
 
-.mat-mdc-button-base 
-{
-   margin-left: 8px;
-}
-
 /* On the phone the dialog is displayed with the buttons hidden by the address bar at the bottom of the screen
    and it is impossible to scroll the page up to reveal them - typical forked up angular material UI design.
    This is supposed to make it possible to scroll the dialog up to see the buttons so they can be used. 
@@ -53,7 +48,7 @@
   margin-right: 0;
 }
 
-.mat-mdc-dialog-content
+.mat-mdc-dialog-content  /* does not work when in app-material.css */
 {
    height:100%;
    max-height: 100%;
@@ -61,4 +56,3 @@
    overflow: auto !important;   
    background-color:  rgba(0, 0, 0, 0.32);
 }
-
