--- a/account.ui/src/app/app-material.css
+++ b/account.ui/src/app/app-material.css
@@ -25,6 +25,45 @@
    min-height: 24px; /* line spacing in the select dropdown */
 }
 
+
+/* Gave up trying to find the 'correct' Material 3 way to change button color
+   and resorted to using the bootstap variable, which at least makes it consistent
+   with the bootstrap dialog. I'm really strongly feeling like it would be wise to
+   abandon Material - seems to be developed with the sole intent of giving a bunch
+   of grassholes something to do with no regard or concern for those trying to use it.
+ */
+.warning {
+   background-color:  var(--bs-danger);
+}
+
+.mat-mdc-card-actions
+{
+   display:inline;
+   margin-top: 0px; 
+      
+}
+
+.actions-card-right
+{
+   display: inline;
+   float: right;
+   margin-bottom: 10px;
+   margin-right: 10px
+}
+
+.actions-card-left
+{
+   display: inline;
+   margin-bottom: 10px;
+}
+
+.deleteicon {
+   font-size: 30px;
+   height: 30px ;
+   width: 30px ;
+   padding-top:3px;
+}
+
 /* This is supposed to be the cause of the excessive input box height
    but changing any of the height properties has no effect
 
